Refactoring & minor improvements